# ComfyUI_photomakerV2_native

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
py/: nodes_photomaker_v2.py
workflow/: workflow_simple.json  workflow_style.json
