[project]
name = "comfyui-photomakerv2-native"
description = "Nodes: PhotoMakerLoaderV2,PhotoMakerEncodeV2"
version = "0.9.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/zhangp365/ComfyUI_photomakerV2_native"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "zhangp3652"
DisplayName = "ComfyUI_photomakerV2_native"
Icon = ""
